force-app/main/default/objects/Contact/fields/Academic_Course_Level__c.field-meta.xml
<CustomField>
    <fullName>Academic_Course_Level__c</fullName>
    <description>Part of Talent Search MAP.  It&#39;s filled out by the TS Advisor, on the Contact record in Salesfroce, when meeting with the Client.</description>
    <label>Academic Course Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>IB</fullName>
            </value>
            <value>
                <fullName>Honors</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>