force-app/main/default/objects/Contact/fields/Academic_Year__c.field-meta.xml
<CustomField>
    <fullName>Academic_Year__c</fullName>
    <inlineHelpText>This field indicates the Academic Year(s) that this student served as SALT Ambassador</inlineHelpText>
    <label>Academic Year</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2015</fullName>
            </value>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>