force-app/main/default/objects/Contact/fields/Achievement_plan__c.field-meta.xml
<CustomField>
    <fullName>Achievement_plan__c</fullName>
    <description>This field is used by both TS and UB for advising purposes.</description>
    <label>Achievement plan</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 years of Foreign Language</fullName>
            </value>
            <value>
                <fullName>3 years of Science</fullName>
            </value>
            <value>
                <fullName>4 years of English</fullName>
            </value>
            <value>
                <fullName>4 years of Math</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Honors</fullName>
            </value>
            <value>
                <fullName>IB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>