force-app/main/default/objects/Contact/fields/Actual_Date_of_HS_Grad_or_HS_Eq_Cert__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_of_HS_Grad_or_HS_Eq_Cert__c</fullName>
    <description>This field is recorded by TS and UB.  For UB, it is also reported (Field #35 on APR).</description>
    <inlineHelpText>Actual Date of High School Graduation (or completion of high school equivalency certificate).</inlineHelpText>
    <label>Actual Date of HS Grad (or HS Eq Cert)</label>
    <type>Date</type>
</CustomField>