force-app/main/default/objects/Contact/fields/Additional_Languages__c.field-meta.xml
<CustomField>
    <fullName>Additional_Languages__c</fullName>
    <description>This is a field recorded by the Advisor (when meeting with the Client) for Advising purposes only.  This field does NOT appear on Intake Form or APR.</description>
    <inlineHelpText>What other languages do they speak?</inlineHelpText>
    <label>Additional Languages</label>
    <length>50</length>
    <type>Text</type>
</CustomField>