force-app/main/default/objects/Contact/fields/Additional_Program_Other__c.field-meta.xml
<CustomField>
    <fullName>Additional_Program_Other__c</fullName>
    <label>Additional Program: Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>