force-app/main/default/objects/Contact/fields/Additional_program_participation__c.field-meta.xml
<CustomField>
    <fullName>Additional_program_participation__c</fullName>
    <label>Additional program participation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boston Scholar-Athlete</fullName>
            </value>
            <value>
                <fullName>Bottom line</fullName>
            </value>
            <value>
                <fullName>DYS</fullName>
            </value>
            <value>
                <fullName>Freedom House</fullName>
            </value>
            <value>
                <fullName>Gear Up</fullName>
            </value>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PIC</fullName>
            </value>
            <value>
                <fullName>Project GRAD</fullName>
            </value>
            <value>
                <fullName>Roxx Map</fullName>
            </value>
            <value>
                <fullName>Summer Search</fullName>
            </value>
            <value>
                <fullName>Talented &amp; Gifted</fullName>
            </value>
            <value>
                <fullName>Tenacity</fullName>
            </value>
            <value>
                <fullName>uAspire</fullName>
            </value>
            <value>
                <fullName>Upward Bound</fullName>
            </value>
            <value>
                <fullName>Youth Build</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>