force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>If( Is_Deceased__c = TRUE, 0 ,  
  If( Birthdate = NULL , 0 , 
    If( Birthdate &gt; Today(),0 , 
      
        ( ((Today() -  Birthdate ) /365) -  (  MOD( ((Today() - Birthdate) /365),1 )))
      
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>