force-app/main/default/objects/Contact/fields/Age_at_Intake__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Intake__c</fullName>
    <formula>( ((Intake_Date__c -  Birthdate ) /365) -  (  MOD( ((Intake_Date__c - Birthdate) /365),1 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age at Intake</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>