force-app/main/default/objects/Contact/fields/Ambassador_Account__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Story S-54-16 - Create private contact based on record type</description>
    <label>Ambassador Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SALT Ambassadors &amp; Members</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>