force-app/main/default/objects/Contact/fields/Ambassador_Certified__c.field-meta.xml
<CustomField>
    <fullName>Ambassador_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Put a checkmark in this field to indicate the SALT Ambassador is certified.</inlineHelpText>
    <label>Ambassador Certified</label>
    <type>Checkbox</type>
</CustomField>