force-app/main/default/objects/Contact/fields/Amount_of_Lobbying_Time__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Lobbying_Time__c</fullName>
    <label>Amount of Lobbying Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>