force-app/main/default/objects/Contact/fields/ASA_Direct_ID__c.field-meta.xml
<CustomField>
    <fullName>ASA_Direct_ID__c</fullName>
    <label>ASA Direct ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>