force-app/main/default/objects/Contact/fields/ASA_Member__c.field-meta.xml
<CustomField>
    <fullName>ASA_Member__c</fullName>
    <description>What ASA groups is the person a part of , Advisory, Focus Group, Consortium</description>
    <label>ASA Member</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASA Board of Directors</fullName>
            </value>
            <value>
                <fullName>Advisory Board</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>