force-app/main/default/objects/Contact/fields/Associated_Travel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Associated_Travel_Expenses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associated Travel Expenses?</label>
    <type>Checkbox</type>
</CustomField>