force-app/main/default/objects/Contact/fields/At_Risk_Alg_Not_Completed_10th_ATOIS__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Alg_Not_Completed_10th_ATOIS__c</fullName>
    <inlineHelpText>At Risk: Pre-Algebra or Algebra Course Not Successfully Completed by Beginning of 10th Grade (at time of initial selection).</inlineHelpText>
    <label>At Risk: Alg Not Completed 10th (ATOIS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No algebra (or pre-) by 10th grade start</fullName>
            </value>
            <value>
                <fullName>Algebra (or pre-) completed by 10th gr</fullName>
            </value>
            <value>
                <fullName>n/a (not yet available)</fullName>
            </value>
            <value>
                <fullName>n/a (prior to 2012)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>