force-app/main/default/objects/Contact/fields/At_Risk_Low_GPA_ATOIS__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Low_GPA_ATOIS__c</fullName>
    <inlineHelpText>At Risk: Low-Grade Point Average (at time of initial selection).</inlineHelpText>
    <label>At Risk: Low GPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GPA of 2.5 or less</fullName>
            </value>
            <value>
                <fullName>GPA above 2.5</fullName>
            </value>
            <value>
                <fullName>n/a (prior to 2012)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>