force-app/main/default/objects/Contact/fields/At_Risk_Reading_LA_or_Math_ATOIS__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Reading_LA_or_Math_ATOIS__c</fullName>
    <inlineHelpText>At Risk: Reading/Language Arts or Math Proficiency Not Achieved (at time of initial selection).</inlineHelpText>
    <label>At Risk: Reading/LA or Math (ATOIS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT Proficient in State assessments</fullName>
            </value>
            <value>
                <fullName>Proficient in State assessments</fullName>
            </value>
            <value>
                <fullName>n/a (no results)</fullName>
            </value>
            <value>
                <fullName>n/a (prior to 2012)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>