force-app/main/default/objects/Contact/fields/Attending_academically_rigorous_program__c.field-meta.xml
<CustomField>
    <fullName>Attending_academically_rigorous_program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attending academically rigorous program?</label>
    <type>Checkbox</type>
</CustomField>