force-app/main/default/objects/Contact/fields/Auto_Created_Source__c.field-meta.xml
<CustomField>
    <fullName>Auto_Created_Source__c</fullName>
    <inlineHelpText>If this field has a value, it means the Contact record was created as part of an automated process (&quot;CPS Event Check In&quot;, or &quot;CPS Sign On&quot;)</inlineHelpText>
    <label>Auto-Created Source</label>
    <length>60</length>
    <type>Text</type>
</CustomField>