force-app/main/default/objects/Contact/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <formula>TEXT(YEAR(Birthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Year</label>
    <type>Text</type>
</CustomField>