force-app/main/default/objects/Contact/fields/Birthdate_Lead_Mapped__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_Lead_Mapped__c</fullName>
    <description>Used to store bithdate while lead conversion</description>
    <label>Birthdate Lead Mapped</label>
    <type>Date</type>
</CustomField>