force-app/main/default/objects/Contact/fields/BirthDate_Text__c.field-meta.xml
<CustomField>
    <fullName>BirthDate_Text__c</fullName>
    <label>BirthDate Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>