force-app/main/default/objects/Contact/fields/Breakfast_Lunch_Series__c.field-meta.xml
<CustomField>
    <fullName>Breakfast_Lunch_Series__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Breakfast/Lunch Series</label>
    <type>Checkbox</type>
</CustomField>