force-app/main/default/objects/Contact/fields/Business_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_2__c</fullName>
    <label>Business Phone 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>