force-app/main/default/objects/Contact/fields/c2g__EnableEmailNotification__c.field-meta.xml
<CustomField>
    <fullName>c2g__EnableEmailNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Email Notification (FM Community)</label>
    <type>Checkbox</type>
</CustomField>