force-app/main/default/objects/Contact/fields/Campus_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>Campus_Stakeholder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campus Stakeholder</label>
    <type>Checkbox</type>
</CustomField>