force-app/main/default/objects/Contact/fields/Client_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Signature_Date__c</fullName>
    <label>Client Signature Date</label>
    <type>Date</type>
</CustomField>