force-app/main/default/objects/Contact/fields/Client_Signature_Needed_Received__c.field-meta.xml
<CustomField>
    <fullName>Client_Signature_Needed_Received__c</fullName>
    <label>Client Signature Needed/Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Needed/NOT Received</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>NOT Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>