force-app/main/default/objects/Contact/fields/Co_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Co_Presenter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this person is willing to co-present a session with ASA please check this box</inlineHelpText>
    <label>Co-Presenter</label>
    <type>Checkbox</type>
</CustomField>