force-app/main/default/objects/Contact/fields/Communications__c.field-meta.xml
<CustomField>
    <fullName>Communications__c</fullName>
    <description>What type of Communications does this contact recieve.</description>
    <label>Communications</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Lender/Servicer</fullName>
            </value>
            <value>
                <fullName>MDHE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>