force-app/main/default/objects/Contact/fields/Contact_Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Owner_Phone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Owner Phone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Phone</field>
            <operation>notContain</operation>
            <value>NULL</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>