force-app/main/default/objects/Contact/fields/Current_Ed_Goal__c.field-meta.xml
<CustomField>
    <fullName>Current_Ed_Goal__c</fullName>
    <label>Current Ed Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>