force-app/main/default/objects/Contact/fields/Current_Education_Level_or_Last_Grade__c.field-meta.xml
<CustomField>
    <fullName>Current_Education_Level_or_Last_Grade__c</fullName>
    <label>Current Education Level or Last Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A1_Adult w/o Cred Alternative Ed</fullName>
            </value>
            <value>
                <fullName>A2_Adult w/o Cred NOT in A1 or A5</fullName>
            </value>
            <value>
                <fullName>A3_HS/GED Grad NOT in postsec</fullName>
            </value>
            <value>
                <fullName>A4_Adult w/Cred postsec dropout</fullName>
            </value>
            <value>
                <fullName>A5_Adult w/o HS Cred postsec dropout</fullName>
            </value>
            <value>
                <fullName>A6_Potential postsec transfer</fullName>
            </value>
            <value>
                <fullName>A7_Postsec student</fullName>
            </value>
            <value>
                <fullName>A8_Adult Other (&gt; 18 years)</fullName>
            </value>
            <value>
                <fullName>A9_Adult Unknown</fullName>
            </value>
            <value>
                <fullName>B1_HS non-Senior (9th-11th grade)</fullName>
            </value>
            <value>
                <fullName>B2_HS Senior or in Alt Ed (12th grade only)</fullName>
            </value>
            <value>
                <fullName>B3_Secondary School dropout (&lt;= 18 years)</fullName>
            </value>
            <value>
                <fullName>B4_Other (&lt;= 18 years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>