force-app/main/default/objects/Contact/fields/Customer_Survey__c.field-meta.xml
<CustomField>
    <fullName>Customer_Survey__c</fullName>
    <label>Customer Survey</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Satisfaction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>