force-app/main/default/objects/Contact/fields/Degrees_Goal__c.field-meta.xml
<CustomField>
    <fullName>Degrees_Goal__c</fullName>
    <label>Degrees Goal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associates (2-year) degree</fullName>
            </value>
            <value>
                <fullName>Bachelor’s Degree</fullName>
            </value>
            <value>
                <fullName>Certificate/Technical Training Program</fullName>
            </value>
            <value>
                <fullName>Master’s Degree</fullName>
            </value>
            <value>
                <fullName>Professional Degree (M.D., J.D.)</fullName>
            </value>
            <value>
                <fullName>Unsure about plans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>