force-app/main/default/objects/Contact/fields/Disconnected_Youth__c.field-meta.xml
<CustomField>
    <fullName>Disconnected_Youth__c</fullName>
    <label>Disconnected Youth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a (prior participant)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>