force-app/main/default/objects/Contact/fields/eClips__c.field-meta.xml
<CustomField>
    <fullName>eClips__c</fullName>
    <defaultValue>false</defaultValue>
    <label>eClips</label>
    <type>Checkbox</type>
</CustomField>