force-app/main/default/objects/Contact/fields/Elidgable_Report_Support__c.field-meta.xml
<CustomField>
    <fullName>Elidgable_Report_Support__c</fullName>
    <formula>ISPICKVAL(Eligibility__c , &quot;Low-Income and First-Gen College&quot;) ||
ISPICKVAL(Eligibility__c , &quot;Low-income-first-gen-academic risk (UB)&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meets LIFG requirements</label>
    <type>Checkbox</type>
</CustomField>