force-app/main/default/objects/Contact/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <inlineHelpText>Eligibility (at time of initial selection)</inlineHelpText>
    <label>Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Risk only (UB)</fullName>
            </value>
            <value>
                <fullName>First-Gen and academic risk (UB)</fullName>
            </value>
            <value>
                <fullName>First-Gen College only</fullName>
            </value>
            <value>
                <fullName>Low-income and academic risk (UB)</fullName>
            </value>
            <value>
                <fullName>Low-Income and First-Gen College</fullName>
            </value>
            <value>
                <fullName>Low-income-first-gen-academic risk (UB)</fullName>
            </value>
            <value>
                <fullName>Low-Income only</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>