force-app/main/default/objects/Contact/fields/Ethnic_Type__c.field-meta.xml
<CustomField>
    <fullName>Ethnic_Type__c</fullName>
    <label>Ethnic Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>African</fullName>
            </value>
            <value>
                <fullName>Brazilian</fullName>
            </value>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>Cape Verdean</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Filipino</fullName>
            </value>
            <value>
                <fullName>Haitian</fullName>
            </value>
            <value>
                <fullName>Hawaiian</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
            <value>
                <fullName>Pakistanian</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Somalian</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>West Indian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>