force-app/main/default/objects/Contact/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <inlineHelpText>Please select the race as indicated by the student to be used for program reporting.</inlineHelpText>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Race</valueSetName>
    </valueSet>
</CustomField>