force-app/main/default/objects/Contact/fields/Expected_Graduation_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Graduation_date__c</fullName>
    <label>Expected Graduation date</label>
    <type>Date</type>
</CustomField>