force-app/main/default/objects/Contact/fields/Expected_Graduation_Year__c.field-meta.xml
<CustomField>
    <fullName>Expected_Graduation_Year__c</fullName>
    <label>Expected Graduation Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>