force-app/main/default/objects/Contact/fields/Father_Guardian2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_Guardian2_Last_Name__c</fullName>
    <label>Parent/Guardian2 Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>