force-app/main/default/objects/Contact/fields/Father_s_college__c.field-meta.xml
<CustomField>
    <fullName>Father_s_college__c</fullName>
    <label>Father&#39;s college</label>
    <length>255</length>
    <type>Text</type>
</CustomField>