force-app/main/default/objects/Contact/fields/Finished_MM101_Courses__c.field-meta.xml
<CustomField>
    <fullName>Finished_MM101_Courses__c</fullName>
    <label>Finished SALT Courses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fundamentals</fullName>
            </value>
            <value>
                <fullName>Educational Planning</fullName>
            </value>
            <value>
                <fullName>Internships, Income and Careers</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>Money Management</fullName>
            </value>
            <value>
                <fullName>Budgeting</fullName>
            </value>
            <value>
                <fullName>Student Loans</fullName>
            </value>
            <value>
                <fullName>Student Loan Repayment</fullName>
            </value>
            <value>
                <fullName>Credit and Debt Management</fullName>
            </value>
            <value>
                <fullName>Saving and Investing</fullName>
            </value>
            <value>
                <fullName>Risk Management</fullName>
            </value>
            <value>
                <fullName>Taxes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>