force-app/main/default/objects/Contact/fields/Govt_Office__c.field-meta.xml
<CustomField>
    <fullName>Govt_Office__c</fullName>
    <description>This field is used to indicate the government office associated to this contact.</description>
    <inlineHelpText>This field is used to indicate the government office associated to this contact.</inlineHelpText>
    <label>Government Office</label>
    <type>TextArea</type>
</CustomField>