force-app/main/default/objects/Contact/fields/Grade_Level_at_Entry__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level_at_Entry__c</fullName>
    <label>Grade Level at Intake</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6th grade</fullName>
            </value>
            <value>
                <fullName>7th grade</fullName>
            </value>
            <value>
                <fullName>8th grade</fullName>
            </value>
            <value>
                <fullName>Rising 9th grader</fullName>
            </value>
            <value>
                <fullName>9th grade</fullName>
            </value>
            <value>
                <fullName>Rising 10th grader</fullName>
            </value>
            <value>
                <fullName>10th grade</fullName>
            </value>
            <value>
                <fullName>Rising 11th grader</fullName>
            </value>
            <value>
                <fullName>11th grade</fullName>
            </value>
            <value>
                <fullName>Rising 12th grader</fullName>
            </value>
            <value>
                <fullName>12th grade</fullName>
            </value>
            <value>
                <fullName>In 4th year of 5-year dual enrollment</fullName>
            </value>
            <value>
                <fullName>In 5th year of 5-year dual enrollment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No response/Unknown</fullName>
            </value>
            <value>
                <fullName>College Dropout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>