force-app/main/default/objects/Contact/fields/Has_IEP__c.field-meta.xml
<CustomField>
    <fullName>Has_IEP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has IEP?</label>
    <type>Checkbox</type>
</CustomField>