force-app/main/default/objects/Contact/fields/Holiday_Card__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday Card</label>
    <type>Checkbox</type>
</CustomField>