force-app/main/default/objects/Contact/fields/Holiday_Gift__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday Gift</label>
    <type>Checkbox</type>
</CustomField>