force-app/main/default/objects/Contact/fields/Home_Phone_FOR_WF__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_FOR_WF__c</fullName>
    <label>Home Phone (FOR WF)</label>
    <type>Phone</type>
</CustomField>