force-app/main/default/objects/Contact/fields/Hours_of_Opp__c.field-meta.xml
<CustomField>
    <fullName>Hours_of_Opp__c</fullName>
    <description>Hours of operation</description>
    <label>Hours of Opp.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>